@@ -123,7 +123,8 @@ name=`basename $0`
 if ${expect_fail:-false}
 then
         echo XFAIL $name "$@"
-        # but don't exit...
+        # Return a failure status but don't exit...
+	false
 else
         echo FAIL $name "$@" ; exit 2; 
 fi ;
